<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_InsuranceProcess"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:layout_marginBottom="1dp"
    card_view:cardBackgroundColor="@color/recycleView_BG">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_id_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/recycleview_insuranceProcess_id_head"
            android:textColor="@color/cardview_text_head"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignTop="@+id/tv_id_head"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/imv_iconTimer"
            android:layout_toRightOf="@+id/tv_id_head"
            android:text="@string/recycleview_insuranceProcess_id_head_default"
            android:textColor="@color/cardview_text_head"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/tv_id_head"
            android:layout_below="@+id/tv_id_head"
            android:layout_marginRight="10dp"
            android:text="@string/recycleview_insuranceProcess_id_head_default"
            android:textColor="@color/cardview_text_description"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_status_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/tv_name"
            android:layout_below="@+id/tv_name"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:text="@string/recycleview_insuranceProcess_license_plate_head"
            android:textColor="@color/cardview_text_description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_status_head"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/tv_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/bt_alertAdd"
            android:layout_toRightOf="@+id/tv_status_head"
            android:gravity="bottom"
            android:text="@string/recycleview_insuranceProcess_license_plate_default"
            android:textColor="@color/cardview_text_description"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imv_iconTimer"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignBottom="@+id/tv_day_left"
            android:layout_toLeftOf="@+id/tv_day_left"
            android:tint="@color/LoginButton_OK"
            card_view:srcCompat="@drawable/ic_timer_off_black_48dp" />

        <TextView
            android:id="@+id/tv_day_left_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_name"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tv_id"
            android:layout_marginEnd="10dp"
            android:gravity="bottom"
            android:paddingBottom="1dp"
            android:text="@string/recycleview_insuranceProcess_date_left_unit_default"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_day_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_day_left_unit"
            android:layout_alignTop="@+id/tv_day_left_unit"
            android:layout_toLeftOf="@+id/tv_day_left_unit"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/recycleview_insuranceProcess_date_left_default"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_call"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:drawable/ic_menu_call" />

        <Button
            android:id="@+id/bt_alertAdd"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/bt_call"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@+id/tv_alert_time"
            android:background="@drawable/ic_add_alert_black_48dp"
            android:backgroundTint="@color/AlertButton_NotActive" />

        <TextView
            android:id="@+id/tv_alert_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bt_alertAdd"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/bt_call"
            android:text="3 ชม." />

    </RelativeLayout>

</android.support.v7.widget.CardView>